new changes final patient adding fetching schedule id